repair to the dark mode logo, also removed unnecessary files

--- a/css/dark.css
+++ b/css/dark.css
@@ -38,7 +38,7 @@ body.dark-theme {
 
 /* Update the logo to the white version */
 body.dark-theme header img {
-    content: url('../img/DarkMode/DSToolsDarkLogo.png');
+    content: url('../img/DarkMode/DSToolsLogoDark.png');
 }
 
 /* Update background and font colors */
